2021-01-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/gif.c (ReadGIFImage): Fix memory leak of global_colormap
        if realloc of memory for comment fails.  Fixes oss-fuzz 29316
        "Direct-leak in MagickMalloc".

        * coders/meta.c (ReadMETAImage): Fix double-free if blob buffer
        was reallocated after being attached to blob.  Fixes oss-fuzz
        29193 "Heap-double-free in MagickFree".

2021-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac: Updates to use recommended forms of AC_INIT and
        AM_INIT_AUTOMAKE.  This was/is painful due to how development
        snapshot versioning is handled.  The version string produced for
        the snapshot version will now contain the snapshot date.  Effort
        has been made to avoid other impacts due to AC_INIT's enforcements
        for how version information is used.

2021-01-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * PerlMagick/Magick.xs: Remove GCC warnings which spewed out at
        increased warning levels.

        * magick/magick_types.h.in: Hide definitions not intended for the
        rest of the world under "if defined(MAGICK_IMPLEMENTATION)".

2021-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac: Skip library symbol tests for gdi32 since these
        fail with the MSYS2 w64-i686 compiler and well as i686 Cygwin.
        The failures caused a build regression for i686 MSYS2/Cygwin.

        * Copyright.txt: Copyright year updates and ChangeLog rotation for
        the new year.