@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003 - 2020 GraphicsMagick Group
+% Copyright (C) 2003 - 2021 GraphicsMagick Group
 % Copyright (C) 2002 ImageMagick Studio
 % Copyright 1991-1999 E. I. du Pont de Nemours and Company
 %
@@ -2577,18 +2577,12 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                                          image);
               }
 
-            if (!AcquireMagickResource(MemoryResource,scanline_size))
-              ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
-                                       image);
-
-            scanline=MagickAllocateResourceLimitedMemory(unsigned char *,(size_t) scanline_size);
+            scanline=MagickAllocateResourceLimitedClearedMemory(unsigned char *,(size_t) scanline_size);
             if (scanline == (unsigned char *) NULL)
               {
-                LiberateMagickResource(MemoryResource,scanline_size);
                 ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
                                          image);
               }
-            memset(scanline,0,(size_t) scanline_size);
             for (sample=0; sample < max_sample; sample++)
               {
                 for (y=0; y < image->rows; y++)
@@ -2671,7 +2665,6 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                           break;
                   }
               }
-            LiberateMagickResource(MemoryResource,scanline_size);
             MagickFreeResourceLimitedMemory(scanline);
             break;
           }
@@ -2768,18 +2761,12 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                                          image);
               }
 
-            if (!AcquireMagickResource(MemoryResource,strip_size_max))
-              ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
-                                       image);
-
-            strip=MagickAllocateResourceLimitedMemory(unsigned char *,(size_t) strip_size_max);
+            strip=MagickAllocateResourceLimitedClearedMemory(unsigned char *,(size_t) strip_size_max);
             if (strip == (unsigned char *) NULL)
               {
-                LiberateMagickResource(MemoryResource,strip_size_max);
                 ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
                                          image);
               }
-            memset(strip,0,(size_t) strip_size_max);
             /*
               Compute per-row stride.
             */
@@ -2891,7 +2878,6 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                 if (status == MagickFail)
                   break;
               }
-            LiberateMagickResource(MemoryResource,strip_size_max);
             MagickFreeResourceLimitedMemory(strip);
             break;
           }
@@ -3021,18 +3007,12 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
             /*
               Allocate tile buffer
             */
-            if (!AcquireMagickResource(MemoryResource,tile_size_max))
-              ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
-                                       image);
-
-            tile=MagickAllocateResourceLimitedMemory(unsigned char *, (size_t) tile_size_max);
+            tile=MagickAllocateResourceLimitedClearedMemory(unsigned char *, (size_t) tile_size_max);
             if (tile == (unsigned char *) NULL)
               {
-                LiberateMagickResource(MemoryResource,tile_size_max);
                 ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
                                          image);
               }
-            memset(tile,0,(size_t) tile_size_max);
             tiles_total=(((image->columns/tile_columns)+((image->columns % tile_columns) ? 1 : 0))
                          *((image->rows/tile_rows)+((image->rows % tile_rows) ? 1 : 0)))*max_sample;
             /*
@@ -3169,7 +3149,6 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                   break;
               }
 
-            LiberateMagickResource(MemoryResource,tile_size_max);
             MagickFreeResourceLimitedMemory(tile);
             break;
           }
@@ -3213,19 +3192,15 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                                          image);
               }
             strip_pixels_size=MagickArraySize(number_pixels,sizeof(uint32));
-            if ((strip_pixels_size == 0) ||
-                (!AcquireMagickResource(MemoryResource,strip_pixels_size)))
+            if (strip_pixels_size == 0)
               ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
                                        image);
-
-            strip_pixels=MagickAllocateResourceLimitedMemory(uint32 *,strip_pixels_size);
+            strip_pixels=MagickAllocateResourceLimitedClearedMemory(uint32 *,strip_pixels_size);
             if (strip_pixels == (uint32 *) NULL)
               {
-                LiberateMagickResource(MemoryResource,strip_pixels_size);
                 ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
                                          image);
               }
-            memset(strip_pixels,0,(size_t) number_pixels*sizeof(uint32));
             if (logging)
               (void) LogMagickEvent(CoderEvent,GetMagickModule(),
                                     "Allocated %" MAGICK_SIZE_T_F "u bytes for RGBA strip",
@@ -3290,7 +3265,6 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                         break;
                       }
               }
-            LiberateMagickResource(MemoryResource,strip_pixels_size);
             MagickFreeResourceLimitedMemory(strip_pixels);
             break;
           }
@@ -3395,14 +3369,12 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
             */
             tile_pixels_size=MagickArraySize(MagickArraySize(tile_columns,tile_rows),
                                              sizeof (uint32));
-            if ((tile_pixels_size == 0) ||
-                (!AcquireMagickResource(MemoryResource,tile_pixels_size)))
+            if (tile_pixels_size == 0)
               ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
                                        image);
             tile_pixels=MagickAllocateResourceLimitedMemory(uint32*,tile_pixels_size);
             if (tile_pixels == (uint32 *) NULL)
               {
-                LiberateMagickResource(MemoryResource,tile_pixels_size);
                 ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
                                          image);
               }
@@ -3513,7 +3485,6 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                     break;
                   }
               }
-            LiberateMagickResource(MemoryResource,tile_pixels_size);
             MagickFreeResourceLimitedMemory(tile_pixels);
             break;
           }
@@ -3564,15 +3535,12 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
               unknown reasons.
             */
             pixels_size=MagickArraySize(number_pixels,sizeof(uint32));
-            if ((pixels_size == 0) ||
-                (!AcquireMagickResource(MemoryResource,pixels_size)))
+            if (pixels_size == 0)
               ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
                                        image);
-
             pixels=MagickAllocateResourceLimitedMemory(uint32 *,pixels_size);
             if (pixels == (uint32 *) NULL)
               {
-                LiberateMagickResource(MemoryResource,pixels_size);
                 ThrowTIFFReaderException(ResourceLimitError,MemoryAllocationFailed,
                                          image);
               }
@@ -3580,7 +3548,6 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                                    (uint32) image->rows,
                                    pixels,0))
               {
-                LiberateMagickResource(MemoryResource,pixels_size);
                 MagickFreeResourceLimitedMemory(pixels);
                 status=MagickFail;
                 break;
@@ -3641,7 +3608,6 @@ ReadTIFFImage(const ImageInfo *image_info,ExceptionInfo *exception)
                 if (status == MagickFail)
                   break;
               }
-            LiberateMagickResource(MemoryResource,pixels_size);
             MagickFreeResourceLimitedMemory(pixels);
             break;
           }
@@ -4252,10 +4218,9 @@ WriteNewsProfile(TIFF *tiff,
         Handle TIFFTAG_RICHTIFFIPTC tag.
       */
       length += (4-(length & 0x03)); /* Round up for long word alignment */
-      profile=MagickAllocateResourceLimitedMemory(unsigned char *,length);
+      profile=MagickAllocateResourceLimitedClearedMemory(unsigned char *,length);
       if (profile == (unsigned char *) NULL)
         return;
-      (void) memset(profile,0,length);
       (void) memcpy(profile,profile_data,profile_length);
 
       if (TIFFIsByteSwapped(tiff))
@@ -4276,10 +4241,9 @@ WriteNewsProfile(TIFF *tiff,
       length += (length & 0x01); /* Round up for Photoshop */
 #if defined(GET_ONLY_IPTC_DATA)
       length += 12;              /* Space for 8BIM header */
-      profile=MagickAllocateResourceLimitedMemory(unsigned char *,length);
+      profile=MagickAllocateResourceLimitedClearedMemory(unsigned char *,length);
       if (profile == (unsigned char *) NULL)
         return;
-      (void) memset(profile,0,length);
       (void) memcpy(profile,"8BIM\04\04\0\0",8);
       profile[8]=(length >> 24) & 0xff;
       profile[9]=(length >> 16) & 0xff;
@@ -4287,10 +4251,9 @@ WriteNewsProfile(TIFF *tiff,
       profile[11]=length & 0xff;
       (void) memcpy(profile+12,profile_data,profile_length);
 #else
-      profile=MagickAllocateResourceLimitedMemory(unsigned char *,length);
+      profile=MagickAllocateResourceLimitedClearedMemory(unsigned char *,length);
       if (profile == (unsigned char *) NULL)
         return;
-      (void) memset(profile,0,length);
       (void) memcpy(profile,profile_data,profile_length);
 #endif
       (void) LogMagickEvent(CoderEvent,GetMagickModule(),
@@ -5814,12 +5777,12 @@ WriteTIFFImage(const ImageInfo *image_info,Image *image)
           /*
             Initialize TIFF colormap.
           */
-          blue=MagickAllocateResourceLimitedArray(unsigned short *,
-                                                  65536L,sizeof(unsigned short));
-          green=MagickAllocateResourceLimitedArray(unsigned short *,
-                                                   65536L,sizeof(unsigned short));
-          red=MagickAllocateResourceLimitedArray(unsigned short *,
-                                                 65536L,sizeof(unsigned short));
+          blue=MagickAllocateResourceLimitedClearedArray(unsigned short *,
+                                                         65536L,sizeof(unsigned short));
+          green=MagickAllocateResourceLimitedClearedArray(unsigned short *,
+                                                          65536L,sizeof(unsigned short));
+          red=MagickAllocateResourceLimitedClearedArray(unsigned short *,
+                                                        65536L,sizeof(unsigned short));
           if ((blue == (unsigned short *) NULL) ||
               (green == (unsigned short *) NULL) ||
               (red == (unsigned short *) NULL))
@@ -5830,9 +5793,6 @@ WriteTIFFImage(const ImageInfo *image_info,Image *image)
               ThrowTIFFWriterException(ResourceLimitError,MemoryAllocationFailed,
                                        image);
             }
-          (void) memset(red,0,65536L*sizeof(unsigned short));
-          (void) memset(green,0,65536L*sizeof(unsigned short));
-          (void) memset(blue,0,65536L*sizeof(unsigned short));
           for (i=0; i < image->colors; i++)
             {
               red[i]=ScaleQuantumToShort(image->colormap[i].red);
