@@ -35,6 +35,10 @@
 <div class="document">
 
 
+<p>2021-01-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;bobsdell">bfriesen<span>&#64;</span>bobsdell</a>&gt;</p>
+<blockquote>
+* coders/tiff.c: Remove unintended double-charging for memory
+resource.  Remove explicit memset where possible.</blockquote>
 <p>2021-01-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* coders/gif.c (ReadGIFImage): Fix memory leak of global_colormap
